syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc FindAll (Empty) returns (UserListResponse);
  rpc FindOne (UserByIdRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc RemoveUser (UserByIdRequest) returns (Empty);
}

message Empty {}

message CreateUserRequest {
  string username = 1;
  string email = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

message UserByIdRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string createdAt = 4; 
}

message UserListResponse {
  repeated UserResponse users = 1;
}
